deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xyz-demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo-app
        image: xyz-demo
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
            ephemeral-storage: 10Mi
          limits:
            cpu: 250m
            memory: 512Mi
            ephemeral-storage: 10Mi
