deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: xyz-demo
  annotations:
    networking.gke.io/v1.FrontendConfig: demo-frontend-config
    networking.gke.io/managed-certificates: demo-cert

spec:
  rules:
  - host: xyz-app.demo.valha.la
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-svc
            port:
              number: 80
